SVVNNI-505: Migrate to Jackson 3 in napcore-rest-api.